hphp/hack/test/typecheck/static_in_prop_decl.php.exp
File "static_in_prop_decl.php", line 6, characters 24-35:
Cannot use `static` or `parent::class` in property declaration (Parsing[1002])
File "static_in_prop_decl.php", line 6, characters 26-35:
Invalid expression in constant initializer (Parsing[1002])
